--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TCCTest</string>
+    <string name="app_name">Diabytes</string>
     <string name="tipo_porcao">Tipo de porção</string>
     <string name="carb">Carboidratos (g)</string>
     <string name="porcao">Porção</string>
