--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,10 @@
     <string name="txt_UIporCHO_M">Quanto 1 unidade de insulina(UI) cobre de carboidrato? (Manhã)</string>
     <string name="txt_UIporCHO_T">Quanto 1 unidade de insulina(UI) cobre de carboidrato? (Tarde)</string>
     <string name="txt_UIporCHO_N">Quanto 1 unidade de insulina(UI) cobre de carboidrato? (Noite)</string>
-<<<<<<< HEAD
-    <string name="txttipoRefeic">Selecione o período da Refeição</string>
     <string name="ci_txtMsg">Olá caro amigo, ficamos muito felizes que tenha optado por utilizar nosso app mas antes de tudo precisamos de algumas informações que seu médico lhe passou para que possamos te ajudar, por favor preencha os campos abaixo de acordo com o que se pede c:</string>
     <string name="periodo">Período não definido</string>
-=======
     <string name="txttipoRefeic">Selecione o tipo de Refeição</string>
     <string name="textDetalhes">Detalhes</string>
->>>>>>> upstream/master
+    <string name="refeicaoperiodo">Não selecionado</string>
+    <string name="txt_metaGlicemica">Qual a sua meta glicêmica?</string>
 </resources>
