Adicionado o campo gramas da porção

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="txt_UIporCHO_N">Quanto 1 unidade de insulina(UI) cobre de carboidrato? (Noite)</string>
     <string name="txttipoRefeic">Selecione o tipo de Refeição</string>
     <string name="textDetalhes">Detalhes</string>
+    <string name="gPorcao">Porção (g)</string>
 </resources>
