Inserção da meta glicêmica; Configurações criado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="salvar">Salvar</string>
     <string name="cancelar">Cancelar</string>
     <string name="tbTitle">Diabytes</string>
-    <string name="menu_1">Opcao</string>
-    <string name="menu_2">Opcao2</string>
+    <string name="menu_1">Configurações</string>
+    <string name="menu_2">Sobre nós</string>
     <string name="searchable">searchable</string>
     <string name="menu_search">Search</string>
     <string name="continuar">Continuar</string>
@@ -20,4 +20,5 @@
     <string name="txttipoRefeic">Selecione o tipo de Refeição</string>
     <string name="textDetalhes">Detalhes</string>
     <string name="gPorcao">Porção (g)</string>
+    <string name="metaGlicemica">Qual é a meta glicêmica indicada pelo seu médico?</string>
 </resources>
