--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="textDetalhes">Detalhes</string>
     <string name="refeicaoperiodo">Não selecionado</string>
     <string name="txt_metaGlicemica">Qual a sua meta glicêmica?</string>
+    <string name="tbTitle">Diabytes</string>
 </resources>
